add mutation tests for ec's in hard problems gemini